Completed snowboard/prospector-split view

--- a/src/app/snowboards/snowboards-board-prospector-split/snowboards-board-prospector-split.component.html
+++ b/src/app/snowboards/snowboards-board-prospector-split/snowboards-board-prospector-split.component.html
@@ -1,3 +1,229 @@
-<p>
-  snowboards-board-prospector-split works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/Prospector/17_JedCreative_Prospector.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Prospector Split</h3>
+        <p class="monospace title-has-line">Freeride</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          The Prospector is designed to take your experience to the next level. An exclusive flat zone under the touring pieces provide extra grip for skinning traction while the Original Rocker Camber Profile and tapered shape give the Prospector
+          ultimate powder floatation on the descent. The elastomeric rubber damping system and firm flex allow the Prospector to mow through runout debris and heavy snow. The unmatched durability of our Carbonium Topsheet and full wrap P-Tex protection
+          will keep the Prospector searching for epic lines for years to come.
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/prospector-split-board-only?pp=16" target="_blank">Buy Online - Without Kit</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/prospector-split-w-kit?pp=16" target="_blank">Buy Online - With Kit</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-original.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/Prospector/17Prospector.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>157</td>
+                    <td>24.7</td>
+                    <td>124</td>
+                    <td>Vario 780</td>
+                    <td>30.2/28.2</td>
+                  </tr>
+                  <tr>
+                    <td>160</td>
+                    <td>24.8</td>
+                    <td>128</td>
+                    <td>Vario 812</td>
+                    <td>30.4/28.4</td>
+                  </tr>
+                  <tr>
+                    <td>164</td>
+                    <td>25.0</td>
+                    <td>133</td>
+                    <td>Vario 846</td>
+                    <td>30.6/28.6</td>
+                  </tr>
+                  <tr>
+                    <td>161X </td>
+                    <td>26.2</td>
+                    <td>128</td>
+                    <td>Vario 912</td>
+                    <td>31.8/29.8</td>
+                  </tr>
+                  <tr>
+                    <td>167X</td>
+                    <td>26.2</td>
+                    <td>134</td>
+                    <td>Vario 890</td>
+                    <td>31.7/29.7</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>Carbonium Topsheet</li>
+                <li>Carbonium Laminate Technology</li>
+                <li>Extended Tour Rocker Camber Profile</li>
+                <li>Vario Power Grip Sidecut</li>
+                <li>Low Profile Tip/Tail</li>
+                <li>STS Pretensioned Fiberglass</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>NS SuperLight Wood Core</li>
+                <li>RDS 1+ Damping System</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-tex Inner and Outer Sidewall</li>
+                <li>Durasurf XT Sintered 5501 Base</li>
+                <li>P Tex Tip/Tail Protection</li>
+                <li>Full Wrap Metal Edge</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/Prospector/NS_ProspectorSplit17_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/Prospector/NS_ProspectorSplit17_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/Prospector/NS_ProspectorSplit17_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-0.png')"></canvas>
+            <input class="knob" data-gal="0" value="0" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-0.png')"></canvas>
+            <input class="knob" data-gal="0" value="0" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-100.png')"></canvas>
+          <input class="knob" data-gal="100" value="100" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="87" style="width: 87%"><strong><i>87</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="87" style="width: 87%"><strong><i>87</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/xhqhGe4ZdFo" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+    </div>
+  </div>
+</div>
