--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -31,9 +31,11 @@
                         <li><a [routerLink]="['longboards/team']">Longboard Team</a></li>
                     </ul>
                 </li>
-                <li><a [routerLink]="['apparel']">Store</a>
+                <li><a [routerLink]="['store/apparel']">Store</a>
                      <ul>
-                        <li><a [routerLink]="['apparel/mens']">Men's</a></li>
+                        <li><a [routerLink]="['store/apparel']">Apparel</a></li>
+                        <li><a [routerLink]="['store/special-edition']">Special Edition Items</a></li>
+                        <!--<li><a [routerLink]="['apparel/mens']">Men's</a></li>
                         <li><a [routerLink]="['apparel/womens']">Women's</a></li>
                         <li><a [routerLink]="['apparel/kids']">Kids's</a></li>
                         <li><a href="#">Women's</a></li>
@@ -41,7 +43,7 @@
                         <li><a [routerLink]="['apparel/accessories']">Accessories</a></li>
                         <li><a [routerLink]="['apparel/hats']">Hats</a></li>
                         <li><a [routerLink]="['apparel/hoodies']">Hoodies</a></li>
-                        <li><a [routerLink]="['apparel/shirts']">Shirts</a></li>
+                        <li><a [routerLink]="['apparel/shirts']">Shirts</a></li>-->
                     </ul>
                 </li>
                 <li><a [routerLink]="['company/calendar']">Calendar</a></li>
