--- a/src/app/store/special-edition/special-edition.component.html
+++ b/src/app/store/special-edition/special-edition.component.html
@@ -17,7 +17,7 @@
 								<h4 class="product_title">25th Anniversary Hat Camoflauge</h4>
 							</div>
             </a>
-						<a class="add_to_cart_button" href="#">View Details</a>
+						<a class="add_to_cart_button" [routerLink]="['/store/special-edition/camoflauge']">View Details</a>
           </li>
 
 					<li class="product has-animation" data-animation="fade-in-from-bottom" data-delay="100" style="opacity: 1; bottom: 0px;">
