Completed special-edition/glove view

--- a/src/app/store/special-edition/ns25-camoflauge/ns25-camoflauge.component.html
+++ b/src/app/store/special-edition/ns25-camoflauge/ns25-camoflauge.component.html
@@ -11,13 +11,11 @@
 								<div class="product single-page">
 
 									<div class="one_half">
-
                     <div class="cart-img">
                       <img src="../../../../assets/img/special-edition/25hatc1.jpg" alt="">
                     </div>
-		
+	
 									</div>
-
 
 									<div class="one_half last">
 										<br /><br /><br /><br />
@@ -56,19 +54,14 @@
 											<input class="productSubmitInput" type="submit" value=" Buy Now" />
 										</div>
 
-										<!--<div class="product_meta monospace">
-											<span class="posted_in"></span>
-										</div>-->
-
 									</div>
 								</div>
-
 							</li>
 						</ul>
 					</div>
 
           <hr>
 
-    </div> <!-- Container Div -->
-  </div> <!-- Main Div -->
-</div> <!-- Content Div -->
+    </div>
+  </div> 
+</div> 
