--- a/src/app/store/special-edition/ns25-glove/ns25-glove.component.html
+++ b/src/app/store/special-edition/ns25-glove/ns25-glove.component.html
@@ -1,3 +1,92 @@
-<p>
-  ns25-glove works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <h1 class="title-has-line text-align-center">25th Anniversary Items</h1>
+      <h6 class="text-align-center catalog-description"> </h6>
+
+      <div id="shop-wrapper" data-col="3">
+						<ul class="productList productLarge">
+							<li id="catProdTd_10871389" class="productItem">
+
+								<div class="product single-page">
+
+									<div class="one_half">
+                    <div class="cart-img">
+                      <img src="../../../../assets/img/special-edition/25glove1.jpg" alt="">
+                    </div>
+	
+									</div>
+
+									<div class="one_half last">
+										<br /><br /><br /><br />
+										<h1 class="title-has-line"> 25 to Life Glove</h1>
+										<p class="monospace title-has-line" style="display:none;">
+											<span class="sku_wrapper">SKU: <span class="sku">025174DB</span></span>
+										</p>
+
+										<h5>
+											<span class="amount"><strong>$79.95</strong> </span>
+										</h5>
+
+										<p>
+                      Genuine leather is the only thing that can protect your hands from the gnarly things you do. Not only will your hands be protected, but from the moment you slip your hands in these things, you'll feel your personality change as well. Your pupils will dilate, you'll get the uncontrollable urge to play power chords on an air guitar, and look for every opportunity to DESTROY. Serve your sentence in the all NEW "25 to Life" Glove from the brand you've come to trust to represent the strength of the Rockies.
+                    </p>
+                    <ul>
+											<li>HiPora 5000 Waterproof Insert
+												<br />
+											</li>
+											<li>3.2 Flexible Insulation powered by Royaloft
+												<br />
+											</li>
+											<li>Full "GOATech" Performance Leather Consruction
+												<br />
+											</li>
+											<li>Warm Polyfill Lining
+												<br />
+											</li>
+											<li>Warmth Rate: 8 out of 10
+												<br />
+											</li>
+										</ul>
+
+										<br />
+
+										<div class="addthis_custom_sharing"></div>
+
+										<br />
+										<div id="catProdAttributes2_10871389" class="productAttributes">
+											<div class="catProductAttributeGroup" data-productattributegroup="6165077">
+												<div class="catProdAttributeTitle">Size</div>
+												<div class="catProdAttributeItem">
+                          <select mandatory="1">
+                            <option value="">-- Please select --</option>
+                            <option value="36217842">Small </option>
+														<option value="36217843">Medium </option>
+														<option value="36217844">Large </option>
+														<option value="36217845">XL </option>
+                          </select>
+                        </div>
+											</div>
+										</div>
+										<br />
+
+										<div class="variations_button">
+											<form action="#">
+												<div class="minus"></div>
+												<input id="Units_10871389" class="productTextInput" name="AddToCart_Amount" type="text" value="1" />
+												<div class="plus"></div>
+											</form>
+											<input class="productSubmitInput" type="submit" value=" Buy Now" />
+										</div>
+
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+
+          <hr>
+
+    </div>
+  </div> 
+</div> 
