Completed special-edition/mitt view

--- a/src/app/store/special-edition/ns25-glove/ns25-glove.component.html
+++ b/src/app/store/special-edition/ns25-glove/ns25-glove.component.html
@@ -59,7 +59,7 @@
 												<div class="catProdAttributeTitle">Size</div>
 												<div class="catProdAttributeItem">
                           <select mandatory="1">
-                            <option value="">-- Please select --</option>
+                            <option value="">-- Please select a size --</option>
                             <option value="36217842">Small </option>
 														<option value="36217843">Medium </option>
 														<option value="36217844">Large </option>
