Completed special-edition/grey view

--- a/src/app/store/special-edition/ns25-camoflauge/ns25-camoflauge.component.html
+++ b/src/app/store/special-edition/ns25-camoflauge/ns25-camoflauge.component.html
@@ -40,7 +40,13 @@
 										<div id="catProdAttributes2_10871389" class="productAttributes">
 											<div class="catProductAttributeGroup" data-productattributegroup="6165077">
 												<div class="catProdAttributeTitle">Size</div>
-												<div class="catProdAttributeItem"><select mandatory="1"><option value="">-- Please select --</option><option value="36217838">L/XL </option><option value="36217839">S/M </option></select></div>
+												<div class="catProdAttributeItem">
+													<select mandatory="1">
+														<option value="">-- Please select a size --</option>
+														<option value="36217839">S/M </option>
+														<option value="36217838">L/XL </option>
+													</select>
+												</div>
 											</div>
 										</div>
 										<br />
