--- a/src/app/longboards/longboards-team/longboards-team.component.html
+++ b/src/app/longboards/longboards-team/longboards-team.component.html
@@ -26,7 +26,7 @@
 									<h5 class="team-name">Alec Olguin</h5>
 									<p class="monospace title-has-line team-function" style="display:none;"></p>
 									<p class="team-description">Hometown - Denver, CO</p>
-									<a href="../team/alec-olguin.html" class="clapat-button outline-button">Read More</a>
+									<a [routerLink]="['/longboards/team/alec-olguin']" class="clapat-button outline-button">Read More</a>
 								</div>
 							</div>
 						</li>
@@ -36,7 +36,7 @@
 									<h5 class="team-name">Dave &quot;The Bear&quot; Morton</h5>
 									<p class="monospace title-has-line team-function" style="display:none;"></p>
 									<p class="team-description">Hometown - Aurora, CO</p>
-									<a href="../team/dave-the-bear-morton.html" class="clapat-button outline-button">Read More</a>
+									<a [routerLink]="['/longboards/team/dave-morton']" class="clapat-button outline-button">Read More</a>
 								</div>
 							</div>
 						</li>
@@ -46,7 +46,7 @@
 									<h5 class="team-name">Lyle Hansberger</h5>
 									<p class="monospace title-has-line team-function" style="display:none;"></p>
 									<p class="team-description">Hometown - Denver, CO</p>
-									<a href="../team/lyle-hansberger.html" class="clapat-button outline-button">Read More</a>
+									<a [routerLink]="['/longboards/team/lyle-hansberger']" class="clapat-button outline-button">Read More</a>
 								</div>
 							</div>
 						</li>
@@ -56,7 +56,7 @@
 									<h5 class="team-name">Tye Donnelly</h5>
 									<p class="monospace title-has-line team-function" style="display:none;"></p>
 									<p class="team-description">Hometown - Oceanside, CA</p>
-									<a href="../team/tye-donnelly.html" class="clapat-button outline-button">Read More</a>
+									<a [routerLink]="['/longboards/team/tye-donnelly']" class="clapat-button outline-button">Read More</a>
 								</div>
 							</div>
 						</li>
@@ -66,7 +66,7 @@
 									<h5 class="team-name">Zach Bailey</h5>
 									<p class="monospace title-has-line team-function" style="display:none;"></p>
 									<p class="team-description">Hometown - Vail, CO</p>
-									<a href="../team/zach-bailey.html" class="clapat-button outline-button">Read More</a>
+									<a [routerLink]="['/longboards/team/zach-bailey']" class="clapat-button outline-button">Read More</a>
 								</div>
 							</div>
 						</li>
