Completed all longboard team member individual views

--- a/src/app/longboards/longboards-team/longboards-team-dave-morton/longboards-team-dave-morton.component.html
+++ b/src/app/longboards/longboards-team/longboards-team-dave-morton/longboards-team-dave-morton.component.html
@@ -1,3 +1,23 @@
-<p>
-  longboards-team-dave-morton works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+						<img src="../../../../assets/img/longboards/team/team-view/Dave_Morton_LB.jpg" border="0" alt="" />
+      </div>
+
+      <div class="two_third last">
+						<h1>Dave &quot;The Bear&quot; Morton</h1>
+						<p><strong style="font-family: Helvetica;">MEET THE BEAR...&nbsp;</strong><span>Grew up dirt jumping, riding/racing BMX and skating. Loves to snowboard and the backcountry. Long boarding was a way to keep snowboarding skills alive     and grew into a love of downhill long boarding. Also enjoys Twister and tuna melts!</span>&nbsp;</p>
+						<p><strong><u></u></strong> </p>
+						<p><strong style="font-family: Helvetica;">DAVE'S&nbsp;FAVORITE NS BOARD IS...&nbsp;</strong>My quiver consists of the Avalanche and Reaper. The Avalanche gives that enhanced stability and the micro drop rocks! It provides a quiet ride due to the composite
+							and veneer. The Reaper has an amazing feel of control and provides a reliable ride I can count on.&nbsp;</p>
+						<p><img src="../../../../assets/img/longboards/team/team-view/Screen%20Shot%202015-05-09%20at%201.47.21%20PM.png">
+							<br /> </p>
+					</div>
+
+          <hr>
+
+
+    </div>
+  </div>
+</div>
